Fix overflowing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+:host {
+	display: contents;
+}
+
 .main {
 	background-color: #23144f72;
 	border-radius: 7px;
