--- a/src/app/students-list/students-list.component.css
+++ b/src/app/students-list/students-list.component.css
@@ -1,3 +1,7 @@
+:host {
+	display: contents;
+}
+
 .main {
 	overflow: hidden;
 	display: flex;
